Resolves fdo#76160 Calc invalid image position on zooming

Change-Id: Idd268a3378a902c173dc4d75d879714c2e919b2d
Reviewed-on: https://gerrit.libreoffice.org/9792
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>
Tested-by: Kohei Yoshida <libreoffice@kohei.us>
(cherry picked from commit b8d84a3bf59212a9652f76d7852c81191b8c8a3b)